Version 1.5.0 with containerContent call
