# src/main/java/com/weaverplatform/service/controllers/ContainerController.java
@@ -2,6 +2,8 @@ package com.weaverplatform.service.controllers;
 
 
 import com.google.gson.Gson;
+import com.google.gson.JsonArray;
+import com.weaverplatform.sdk.Weaver;
 import com.weaverplatform.service.payloads.AddFileRequest;
 import com.weaverplatform.service.payloads.FileFromMultipartRequest;
 import com.weaverplatform.service.payloads.JobReport;
@@ -14,7 +16,12 @@ import spark.Route;
 
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
+
+import static com.weaverplatform.service.controllers.StoreController.getWeaver;
 
 public class ContainerController {
 
@@ -91,6 +98,53 @@ public class ContainerController {
     }
 
     return new JobReport(true).toString(response);
+  };
+
+
+
+  public static Route listContent = (Request request, Response response) -> {
+
+    String project = request.queryParamOrDefault("project", null);
+    if(project == null) {
+      return new JobReport(false, "Please provide project").toString(response);
+    }
+
+    String authToken = request.queryParamOrDefault("user", null);
+    if(authToken == null) {
+      return new JobReport(false, "Please provide authToken").toString(response);
+    }
+
+    String fileId = request.queryParamOrDefault("fileId", null);
+    if(fileId == null) {
+      return new JobReport(false, "Please provide fileId").toString(response);
+    }
+
+
+    Weaver weaver;
+    try {
+      weaver = getWeaver(project, authToken);
+    } catch(RuntimeException e) {
+      return new JobReport(false, "Connecting to weaver-server failed with this message: "+e.getMessage().replace("\"", "\\\"")+"");
+    }
+
+    JsonArray outline = new JsonArray();
+    InputStream containerFileStream;
+    try {
+      containerFileStream = weaver.downloadFile(fileId);
+
+      ZipInputStream zipStream = new ZipInputStream(containerFileStream);
+      while(zipStream.available() > 0) {
+        ZipEntry entry = zipStream.getNextEntry();
+        if(entry != null) {
+          outline.add(entry.getName());
+        }
+      }
+
+    } catch (IOException e) {
+      return new JobReport(false, "Could not read zip file: "+e.getMessage().replace("\"", "\\\"")+"");
+    }
+    response.type("application/json");
+    return outline.toString();
   };
 
 }
