# src/main/resources/public/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   description: Create rdf files inside zip archives.
-  version: 1.4.1
+  version: 1.5.0
   title: rdf-export-service
   contact:
     email: info@sysunite.com
@@ -261,6 +261,35 @@ paths:
       responses:
         '200':
           description: succes
+
+  /containerContent:
+    get:
+      summary: Get the content of the zip
+      description: In string
+      operationId: containerContent
+      produces:
+        - application/json
+      parameters:
+        - in: query
+          name: project
+          required: true
+          type: string
+          description: the id of the project
+        - in: query
+          name: user
+          required: true
+          type: string
+          description: the authtoken of the user calling the service
+        - in: query
+          name: fileId
+          required: true
+          type: string
+          description: the id of the file in the store
+      responses:
+        '200':
+          description: succes
+          schema:
+            type: string
 
   /resetLocks:
     get:
